bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:8: error: type mismatch;
 found   : Int
 required: ?{def +(x$1: ? >: Char): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def +(x$1: ? >: Char): ?}
  	else s = str(0) + str(1) + str(2)
                        ^frontTimes:8: error: type mismatch;
 found   : Char
 required: String
  	else s = str(0) + str(1) + str(2)
                                      ^