bat.string1.lessons.bat.string1.FrontTimes.scala.code
def stringTimes(str:String, n:Int):String = {
  var s = ""
                                             for (i <- 0 to n-1) {s=s+str};return s}

def frontTimes(str:String, n:Int):String = {
  var s = ""
  	if (str.length <3) {s = str}
  	else s = str(0) + str(1) + str(2)
  val st = stringTimes(s,n)
  return st}